<<<<<<< HEAD
[gd_scene load_steps=49 format=3 uid="uid://csf4nih7sgf55"]
=======
[gd_scene load_steps=43 format=3 uid="uid://csf4nih7sgf55"]
>>>>>>> 59510b83e89232a772f99a6db29f48be8a26aba7

[ext_resource type="Script" uid="uid://cfgd1vsnpf8pm" path="res://clicktomove.gd" id="1_4n72w"]
[ext_resource type="Script" uid="uid://diaac5o0qnkl4" path="res://camera_rig_3d.gd" id="2_4n72w"]
[ext_resource type="Resource" uid="uid://bxesq4pdv56i6" path="res://inventory/playerinv.tres" id="2_7jckw"]
[ext_resource type="Script" uid="uid://b2ursdhjfmtil" path="res://set_material.gd" id="3_o5brn"]
[ext_resource type="PackedScene" uid="uid://c0cn06207k6hx" path="res://inventory/inv_ui.tscn" id="4_7jckw"]
[ext_resource type="Script" uid="uid://cpt7hqk32etut" path="res://dialog_cube.gd" id="4_xerf1"]
[ext_resource type="PackedScene" uid="uid://73jm5qjy52vq" path="res://addons/dialogue_manager/example_balloon/example_balloon.tscn" id="5_xerf1"]
<<<<<<< HEAD
[ext_resource type="PackedScene" uid="uid://dji1mmny3r537" path="res://emile@Walking_inplace.fbx" id="6_cx7hc"]
[ext_resource type="PackedScene" uid="uid://nt8xguc4qoi0" path="res://schraube_collectible.tscn" id="10_1k4qt"]
[ext_resource type="Resource" uid="uid://cjkr2v3624t8x" path="res://inventory/items/screw.tres" id="11_wmnu3"]
[ext_resource type="PackedScene" uid="uid://d01u1r6wuo0du" path="res://furniture/table/Table .glb" id="12_wmnu3"]
[ext_resource type="PackedScene" uid="uid://q2fmtag8jm80" path="res://2d_textures/industrielle.lampe.2d.glb" id="13_gdijh"]
[ext_resource type="PackedScene" uid="uid://gk8loikv73ri" path="res://2d_textures/grüneLampe.2d.glb" id="14_gdijh"]
=======
[ext_resource type="PackedScene" uid="uid://rng1lomi45p5" path="res://emile_walking.tscn" id="6_cx7hc"]
[ext_resource type="PackedScene" uid="uid://nt8xguc4qoi0" path="res://schraube_collectible.tscn" id="10_1k4qt"]
[ext_resource type="Resource" uid="uid://cjkr2v3624t8x" path="res://inventory/items/screw.tres" id="11_wmnu3"]
[ext_resource type="PackedScene" uid="uid://d01u1r6wuo0du" path="res://furniture/table/Table .glb" id="12_wmnu3"]
[ext_resource type="PackedScene" uid="uid://gk8loikv73ri" path="res://2d_textures/grüneLampe.2d.glb" id="14_gdijh"]
>>>>>>> 59510b83e89232a772f99a6db29f48be8a26aba7
[ext_resource type="PackedScene" uid="uid://cwfb4gtwfmgmc" path="res://2d_textures/lilaneLaterne.2d.glb" id="14_s2gwd"]
[ext_resource type="PackedScene" uid="uid://dvja0nrsllgkn" path="res://furniture/wandschrank/wandschrank.schubladen.glb" id="14_xqio1"]
[ext_resource type="PackedScene" uid="uid://cgj4sjr2p3eu2" path="res://furniture/schwebeillusion.glb" id="15_4wo56"]
[ext_resource type="PackedScene" uid="uid://dtugoi7mnj52w" path="res://furniture/vitrine.glb" id="15_xxfyy"]
[ext_resource type="Script" uid="uid://bku07fpi30cw7" path="res://furniture/wandschrank/wandschrank_interaction.gd" id="16_bhch6"]
[ext_resource type="PackedScene" uid="uid://dvqgih2ym8clv" path="res://furniture/Caesar_Decipher_1_3.glb" id="19_4tbvq"]
[ext_resource type="Script" uid="uid://dx4dxcwjif2c2" path="res://furniture/interaction.gd" id="20_17qtc"]
<<<<<<< HEAD
[ext_resource type="PackedScene" uid="uid://krfr25dirj3x" path="res://furniture/bücherschrank (1)_books_blend.glb" id="22_tjlnt"]
[ext_resource type="PackedScene" uid="uid://bmmjgqilsyr6v" path="res://furniture/Orangenbaum.Koffer.glb" id="23_o10xo"]
[ext_resource type="Script" uid="uid://74k4arqvy75u" path="res://furniture/buecherschrank_groß/bücherschrank_zu_close_up.gd" id="24_65o23"]
=======
[ext_resource type="PackedScene" uid="uid://krfr25dirj3x" path="res://furniture/bücherschrank (1)_books_blend.glb" id="22_tjlnt"]
[ext_resource type="PackedScene" uid="uid://bmmjgqilsyr6v" path="res://furniture/Orangenbaum.Koffer.glb" id="23_o10xo"]
>>>>>>> 59510b83e89232a772f99a6db29f48be8a26aba7
[ext_resource type="PackedScene" uid="uid://b3bwafqb8upe0" path="res://furniture/Orangenbaum.Automat.glb" id="24_b6ryl"]
[ext_resource type="PackedScene" uid="uid://b6262ifxd1fj6" path="res://2d_textures/roter.Teppich.glb" id="24_cx7hc"]
[ext_resource type="PackedScene" uid="uid://wcfb1xyc610x" path="res://furniture/buecherschrank_groß/bücherschrank_neu.glb" id="25_cx7hc"]
[ext_resource type="PackedScene" uid="uid://4uygi3uul3fk" path="res://wall/texture.wall.floor.glb" id="26_65o23"]
<<<<<<< HEAD
[ext_resource type="Script" uid="uid://bu1t2jkvigtsa" path="res://katze.gd" id="28_gpyy4"]
[ext_resource type="PackedScene" uid="uid://derp73wjkbi8k" path="res://2d_textures/weiße.katze_liegend.glb" id="28_s2gwd"]
=======
>>>>>>> 59510b83e89232a772f99a6db29f48be8a26aba7

[sub_resource type="NavigationMesh" id="NavigationMesh_egite"]
vertices = PackedVector3Array(-8.5815, 0.0695, -9.819, -8.5815, 0.0695, 9.931, 8.6685, 0.0695, 9.931, 8.6685, 0.0695, -9.819)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]
cell_height = 0.01

[sub_resource type="BoxMesh" id="BoxMesh_xerf1"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7vlg0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7jckw"]

[sub_resource type="VideoStreamTheora" id="VideoStreamTheora_4n72w"]
file = "video.ogg"

[sub_resource type="BoxMesh" id="BoxMesh_7jckw"]

[sub_resource type="BoxShape3D" id="BoxShape3D_64ncn"]
size = Vector3(1.2, 1.2, 1.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_h03pe"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tjlnt"]
size = Vector3(7, 2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_xxfyy"]
size = Vector3(2.1, 3.1, 4)

[sub_resource type="BoxShape3D" id="BoxShape3D_o5brn"]
size = Vector3(1.25, 5.8, 4)

[sub_resource type="SphereShape3D" id="SphereShape3D_17qtc"]
radius = 2.885

[sub_resource type="BoxShape3D" id="BoxShape3D_o10xo"]
size = Vector3(1.2, 6, 2.7)

[sub_resource type="BoxShape3D" id="BoxShape3D_b6ryl"]
size = Vector3(4.5, 8.5, 7)

[sub_resource type="BoxShape3D" id="BoxShape3D_cx7hc"]
size = Vector3(3, 5.4, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_65o23"]
size = Vector3(1, 5.7, 5.6)

<<<<<<< HEAD
[sub_resource type="SphereShape3D" id="SphereShape3D_gdijh"]
radius = 3.0

[sub_resource type="BoxShape3D" id="BoxShape3D_gdijh"]
size = Vector3(0.5, 2, 2)

[sub_resource type="SphereShape3D" id="SphereShape3D_wnnp2"]
radius = 2.0

=======
[sub_resource type="BoxShape3D" id="BoxShape3D_gdijh"]
size = Vector3(0.5, 2, 2)

>>>>>>> 59510b83e89232a772f99a6db29f48be8a26aba7
[node name="Main" type="Node3D"]

[node name="schraube_collectible" parent="." instance=ExtResource("10_1k4qt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.47428, 0, 8.39647)
item = ExtResource("11_wmnu3")

[node name="schraube_collectible2" parent="." instance=ExtResource("10_1k4qt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.52149, 0, 0)
item = ExtResource("11_wmnu3")

[node name="schraube_collectible3" parent="." instance=ExtResource("10_1k4qt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.59032, 0, 0)
item = ExtResource("11_wmnu3")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.877023, 0, 0, 1.36845)
navigation_mesh = SubResource("NavigationMesh_egite")
script = ExtResource("3_o5brn")

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D"]
transform = Transform3D(18.163, 0, 0, 0, 0.101, 0, 0, 0, 20.638, 0, 0, 0)
mesh = SubResource("BoxMesh_xerf1")

[node name="StaticBody3D" type="StaticBody3D" parent="NavigationRegion3D/MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/MeshInstance3D/StaticBody3D"]
shape = SubResource("BoxShape3D_7vlg0")

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
transform = Transform3D(0.940098, 0, 0.340904, 0, 1, 0, -0.340904, 0, 0.940098, 0, 0, 0)
script = ExtResource("1_4n72w")
inv = ExtResource("2_7jckw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0)
shape = SubResource("CapsuleShape3D_7jckw")

[node name="emile_Walking" parent="CharacterBody3D" instance=ExtResource("6_cx7hc")]

<<<<<<< HEAD
[node name="Node3D" type="Node3D" parent="CharacterBody3D"]

[node name="emile_Walking_inplace" parent="CharacterBody3D/Node3D" instance=ExtResource("6_cx7hc")]
transform = Transform3D(-1.97445, 0, 1.28146, 0, 2.7, 0, -1.0214, 0, -2.47717, 0, 0, 0)
=======
[node name="NavigationAgent3D" type="NavigationAgent3D" parent="CharacterBody3D"]
>>>>>>> 59510b83e89232a772f99a6db29f48be8a26aba7

[node name="CameraRig3D" type="Node3D" parent="." node_paths=PackedStringArray("player")]
transform = Transform3D(1, 0, 0, 0, 0.999887, 0.0150267, 0, -0.0150267, 0.999887, -0.523499, 1.92646, 2.63231)
script = ExtResource("2_4n72w")
player = NodePath("../CharacterBody3D")

[node name="SpringArm3D" type="SpringArm3D" parent="CameraRig3D"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0.178892, -0.689366)
spring_length = 7.0

[node name="Camera3D" type="Camera3D" parent="CameraRig3D/SpringArm3D" groups=["Camera"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.44411, -2.78648)

[node name="Timer" type="Timer" parent="."]

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 1.7778

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="AspectRatioContainer"]
layout_mode = 2
stream = SubResource("VideoStreamTheora_4n72w")
expand = true

[node name="DialogCube" type="Node3D" parent="."]
<<<<<<< HEAD
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.08441, 0, 11.8573)
=======
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.39459, 0, -1.62312)
>>>>>>> 59510b83e89232a772f99a6db29f48be8a26aba7
script = ExtResource("4_xerf1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="DialogCube"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.17536, 0.471846, -3.24156)
mesh = SubResource("BoxMesh_7jckw")

[node name="Area3D" type="Area3D" parent="DialogCube"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DialogCube/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.10033, 0.285246, -3.21464)
shape = SubResource("BoxShape3D_64ncn")

[node name="DialogueUi" parent="." instance=ExtResource("5_xerf1")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="inv_UI" parent="CanvasLayer" instance=ExtResource("4_7jckw")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -149.5
offset_top = -183.0
offset_right = 149.5
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0

[node name="light" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.13058, -0.0251952, 2.57268)

[node name="grüneLampe_left" parent="light" instance=ExtResource("14_gdijh")]
transform = Transform3D(0.0255838, 0, -0.999673, 0, 1, 0, 0.999673, 0, 0.0255838, -12.8758, 3.0634, -9.02369)

[node name="OmniLight3D" type="OmniLight3D" parent="light/grüneLampe_left"]
transform = Transform3D(0.0255838, 0, 0.999673, 0, 1, 0, -0.999673, 0, 0.0255838, 0.674092, 1.23625, -0.518433)
light_color = Color(0.860172, 0.869768, 0.51242, 1)
light_energy = 1.161
omni_range = 7.0

[node name="grüneLampe_left2" parent="light" instance=ExtResource("14_gdijh")]
transform = Transform3D(0.0255838, 0, -0.999673, 0, 1, 0, 0.999673, 0, 0.0255838, -12.8758, 3.0634, 2.89381)

[node name="OmniLight3D" type="OmniLight3D" parent="light/grüneLampe_left2"]
transform = Transform3D(0.0255838, 0, 0.999673, 0, 1, 0, -0.999673, 0, 0.0255838, 0.674092, 1.23625, -0.518433)
light_color = Color(0.860172, 0.869768, 0.51242, 1)
<<<<<<< HEAD
light_energy = 2.0
omni_range = 9.796
=======
light_energy = 1.161
omni_range = 7.0
>>>>>>> 59510b83e89232a772f99a6db29f48be8a26aba7

[node name="grüneLampe_right" parent="light" instance=ExtResource("14_gdijh")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 4.44607, 3.0634, -7.11551)

[node name="OmniLight3D" type="OmniLight3D" parent="light/grüneLampe_right"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.98382, -0.0631685)
light_color = Color(0.858824, 0.870588, 0.513726, 1)
light_energy = 1.192
omni_range = 7.0

[node name="lilaneLaterne_2d" parent="light" instance=ExtResource("14_s2gwd")]
<<<<<<< HEAD
transform = Transform3D(-0.647816, 0, -0.318027, 0, 0.389121, 0, 0.694114, 0, -0.296815, 4.0147, 1.78704, -3.16639)
=======
transform = Transform3D(-0.647816, 0, -0.318027, 0, 0.389121, 0, 0.694114, 0, -0.296815, 4.0147, 1.37093, -3.16639)
>>>>>>> 59510b83e89232a772f99a6db29f48be8a26aba7

[node name="OmniLight3D" type="OmniLight3D" parent="light/lilaneLaterne_2d"]
transform = Transform3D(-0.0892318, 0, 1.04945, 0, 2.5699, 0, -2.29049, 0, -0.194754, 0.784439, 2.37916, 0.855785)
light_color = Color(1, 0.145098, 0.733333, 1)

<<<<<<< HEAD
[node name="industrielle_lampe_2d" parent="light" instance=ExtResource("13_gdijh")]
transform = Transform3D(0.059344, 0, -0.664374, 0, 0.510241, 0, 1.01778, 0, 0.0387381, -3.88267, 6.40645, 2.68409)

[node name="SpotLight3D" type="SpotLight3D" parent="light/industrielle_lampe_2d"]
transform = Transform3D(0.978954, 0.0599921, 0.0124659, -0.0168744, -0.130959, 1.95541, 0.092971, -1.49645, -0.0994189, 0.182034, 0.512064, -0.0561001)
light_color = Color(0.941689, 0.548954, 0.255923, 1)
light_energy = 12.051
spot_range = 12.599

[node name="furniture" type="Node3D" parent="."]

[node name="Table " parent="furniture" instance=ExtResource("12_wmnu3")]
transform = Transform3D(1.02139, 0, 0, 0, 0.514446, 0, 0, 0, 0.986232, 7.53596, 1.78183, 4.99246)
=======
[node name="furniture" type="Node3D" parent="."]

[node name="Table " parent="furniture" instance=ExtResource("12_wmnu3")]
transform = Transform3D(1.02139, 0, 0, 0, 0.452166, 0, 0, 0, 1.18046, 7.53596, 1.38289, 5.51724)
>>>>>>> 59510b83e89232a772f99a6db29f48be8a26aba7

[node name="StaticBody3D" type="StaticBody3D" parent="furniture/Table "]

[node name="CollisionShape3D" type="CollisionShape3D" parent="furniture/Table /StaticBody3D"]
transform = Transform3D(3.39118, 0, 0, 0, 3.54508, 0, 0, 0, 6.04079, 0, -0.821734, -0.0355084)
shape = SubResource("BoxShape3D_h03pe")

[node name="Table 2" parent="furniture" instance=ExtResource("12_wmnu3")]
<<<<<<< HEAD
transform = Transform3D(-4.46463e-08, 0, -1.18046, 0, 0.582041, 0, 1.02139, 0, -5.15996e-08, 5.40714, 1.82548, 0.39213)
=======
transform = Transform3D(-4.46463e-08, 0, -1.18046, 0, 0.452166, 0, 1.02139, 0, -5.15996e-08, 5.40714, 1.38289, 0.39213)
>>>>>>> 59510b83e89232a772f99a6db29f48be8a26aba7

[node name="StaticBody3D" type="StaticBody3D" parent="furniture/Table 2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="furniture/Table 2/StaticBody3D"]
transform = Transform3D(3.39118, 0, 0, 0, 3.54508, 0, 0, 0, 6.04079, 0, -0.821734, -0.0355084)
shape = SubResource("BoxShape3D_h03pe")

[node name="wandschrank_schubladen" parent="furniture" instance=ExtResource("14_xqio1")]
<<<<<<< HEAD
transform = Transform3D(-0.566629, 0, 8.74228e-08, 0, 0.742939, 0, -4.95363e-08, 0, -1, 8.76492, 2.18357, 4.66489)
=======
transform = Transform3D(-0.566629, 0, 8.74228e-08, 0, 0.742939, 0, -4.95363e-08, 0, -1, 8.76492, 1.98973, 4.66489)
>>>>>>> 59510b83e89232a772f99a6db29f48be8a26aba7
script = ExtResource("16_bhch6")

[node name="Area3D" type="Area3D" parent="furniture/wandschrank_schubladen"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="furniture/wandschrank_schubladen/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, -1.06581e-14, 0, 1, 1.77729, 0, -0.718191)
shape = SubResource("BoxShape3D_tjlnt")

[node name="schwebeillusion" parent="furniture" instance=ExtResource("15_4wo56")]
transform = Transform3D(-0.0585517, 0, -0.931759, 0, 0.994101, 0, 0.998788, 0, -0.0546223, -4.94148, 0.349927, -5.91459)

[node name="StaticBody3D" type="StaticBody3D" parent="furniture/schwebeillusion"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="furniture/schwebeillusion/StaticBody3D"]
transform = Transform3D(1, 0, 1.11759e-08, 0, 1, 0, 0, 0, 1, 0, 1.24295, 0)
shape = SubResource("BoxShape3D_xxfyy")

[node name="vitrine" parent="furniture" instance=ExtResource("15_xxfyy")]
transform = Transform3D(0.776082, 0, 0, 0, 0.956385, 0, 0, 0, 0.854876, -8.53808, -0.111372, -1)

[node name="StaticBody3D" type="StaticBody3D" parent="furniture/vitrine"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="furniture/vitrine/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.223406, 3.14273, 0)
shape = SubResource("BoxShape3D_o5brn")

[node name="Caesar_Decipher_1_3" parent="furniture" instance=ExtResource("19_4tbvq")]
<<<<<<< HEAD
transform = Transform3D(0.536319, 0, 0, 0, 1, 0, 0, 0, 0.429996, 4.25047, 1.91021, 1.57527)
=======
transform = Transform3D(0.536319, 0, 0, 0, 1, 0, 0, 0, 0.429996, 4.25047, 1.49134, 1.57527)
>>>>>>> 59510b83e89232a772f99a6db29f48be8a26aba7
script = ExtResource("20_17qtc")

[node name="Area3D" type="Area3D" parent="furniture/Caesar_Decipher_1_3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="furniture/Caesar_Decipher_1_3/Area3D"]
shape = SubResource("SphereShape3D_17qtc")

[node name="bücherschrank_klein" parent="furniture" instance=ExtResource("22_tjlnt")]
transform = Transform3D(0.0188035, 0, -1.39129, 0, 0.892586, 0, 0.991929, 0, 0.0263739, 7.27898, 0, -7.0424)

[node name="StaticBody3D" type="StaticBody3D" parent="furniture/bücherschrank_klein"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="furniture/bücherschrank_klein/StaticBody3D"]
transform = Transform3D(1, 0, 1.37836e-07, 0, 1, 0, -2.04891e-08, 0, 1, 0.0601869, 3.05801, 0.000813961)
shape = SubResource("BoxShape3D_o10xo")

[node name="Orangenbaum_Koffer" parent="furniture" instance=ExtResource("23_o10xo")]
transform = Transform3D(-0.157712, 0, -0.238588, 0, 0.196113, 0, 0.166217, 0, -0.226379, -0.926, 0.09, 5.852)

[node name="StaticBody3D" type="StaticBody3D" parent="furniture/Orangenbaum_Koffer"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="furniture/Orangenbaum_Koffer/StaticBody3D"]
transform = Transform3D(1, 0, -6.70552e-08, 0, 1, 0, -1.11759e-08, 0, 1, -0.0628106, 4.29937, 6.33719)
shape = SubResource("BoxShape3D_b6ryl")

[node name="Orangenbaum_Automat" parent="furniture" instance=ExtResource("24_b6ryl")]
transform = Transform3D(0.136312, 0, 0.327257, 0, 0.315, 0, -0.2361, 0, 0.188942, -0.130486, 0, 6)

[node name="StaticBody3D" type="StaticBody3D" parent="furniture/Orangenbaum_Automat"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="furniture/Orangenbaum_Automat/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0707188, 2.94075, 0.0294561)
shape = SubResource("BoxShape3D_cx7hc")

[node name="bücherschrank_neu" parent="furniture" instance=ExtResource("25_cx7hc")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1.53493, 0.0505, 1.38332)
<<<<<<< HEAD
script = ExtResource("24_65o23")
=======
>>>>>>> 59510b83e89232a772f99a6db29f48be8a26aba7

[node name="StaticBody3D" type="StaticBody3D" parent="furniture/bücherschrank_neu"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="furniture/bücherschrank_neu/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.40698, 2.98291, -1.0148)
shape = SubResource("BoxShape3D_65o23")

<<<<<<< HEAD
[node name="Area3D" type="Area3D" parent="furniture/bücherschrank_neu"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.57579, 1.28671, 7.15256e-07)

[node name="CollisionShape3D" type="CollisionShape3D" parent="furniture/bücherschrank_neu/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.530895, 0, -1.08606)
shape = SubResource("SphereShape3D_gdijh")

[node name="roter_Teppich" parent="furniture" instance=ExtResource("24_cx7hc")]
transform = Transform3D(3.68499, 0, 0, 0, 1, 0, 0, 0, 2.58851, -1.1877, -0.475431, 5.34306)
=======
[node name="roter_Teppich" parent="furniture" instance=ExtResource("24_cx7hc")]
transform = Transform3D(2.55523, 0, 0, 0, 1, 0, 0, 0, 2.33176, -1.1877, -0.475431, 5.34306)
>>>>>>> 59510b83e89232a772f99a6db29f48be8a26aba7

[node name="walls" type="Node3D" parent="."]

[node name="wall_right" parent="walls" instance=ExtResource("26_65o23")]
<<<<<<< HEAD
transform = Transform3D(1, 0, 0, 0, 3.1512, 0, 0, 0, 10.0181, 7.89834, 0.13961, 1.50253)
=======
transform = Transform3D(1, 0, 0, 0, 3.1512, 0, 0, 0, 10.0181, 8.05942, 0.13961, 1.50253)
>>>>>>> 59510b83e89232a772f99a6db29f48be8a26aba7

[node name="StaticBody3D" type="StaticBody3D" parent="walls/wall_right"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="walls/wall_right/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.877768, 1.01253, 0)
shape = SubResource("BoxShape3D_gdijh")

[node name="wall_left" parent="walls" instance=ExtResource("26_65o23")]
<<<<<<< HEAD
transform = Transform3D(1, 0, 0, 0, 3.1512, 0, 0, 0, 10.0181, -9.93743, 0.13961, 1.50253)
=======
transform = Transform3D(1, 0, 0, 0, 3.1512, 0, 0, 0, 10.0181, -10.0107, 0.13961, 1.50253)
>>>>>>> 59510b83e89232a772f99a6db29f48be8a26aba7

[node name="StaticBody3D" type="StaticBody3D" parent="walls/wall_left"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="walls/wall_left/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.877768, 1.01253, 0)
shape = SubResource("BoxShape3D_gdijh")

<<<<<<< HEAD
[node name="wall_back" parent="walls" instance=ExtResource("26_65o23")]
transform = Transform3D(-4.37114e-08, 0, 9.15965, 0, 3.1512, 0, -1, 0, -4.00381e-07, -0.195547, 0.13961, -6.265)

[node name="StaticBody3D" type="StaticBody3D" parent="walls/wall_back"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="walls/wall_back/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.877768, 1.01253, 0)
shape = SubResource("BoxShape3D_gdijh")

[node name="wall_front" parent="walls" instance=ExtResource("26_65o23")]
transform = Transform3D(-4.37114e-08, 0, 9.15965, 0, 3.1512, 0, -1, 0, -4.00381e-07, -0.195547, 0.13961, 13.9605)
=======
[node name="wall_front" parent="walls" instance=ExtResource("26_65o23")]
transform = Transform3D(-4.37114e-08, 0, 9.15965, 0, 3.1512, 0, -1, 0, -4.00381e-07, -0.195547, 0.13961, -6.63436)
>>>>>>> 59510b83e89232a772f99a6db29f48be8a26aba7

[node name="StaticBody3D" type="StaticBody3D" parent="walls/wall_front"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="walls/wall_front/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.877768, 1.01253, 0)
shape = SubResource("BoxShape3D_gdijh")

<<<<<<< HEAD
[node name="katze" type="Node3D" parent="."]
script = ExtResource("28_gpyy4")

[node name="Area3D" type="Area3D" parent="katze"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 5.96046e-08, 0, 1, -8.92426, -5.96046e-08, 3.57628e-07)

[node name="CollisionShape3D" type="CollisionShape3D" parent="katze/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.517924, 0, 1.50576)
shape = SubResource("SphereShape3D_wnnp2")

[node name="weiße_katze_liegend" parent="katze" instance=ExtResource("28_s2gwd")]
transform = Transform3D(0.899965, 0, -0.262238, 0, 0.913782, 0, 0.435467, 0, 0.541959, -8.34996, -0.391023, 1.62043)

=======
>>>>>>> 59510b83e89232a772f99a6db29f48be8a26aba7
[connection signal="body_entered" from="DialogCube/Area3D" to="DialogCube" method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="furniture/wandschrank_schubladen/Area3D" to="furniture/wandschrank_schubladen" method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="furniture/Caesar_Decipher_1_3/Area3D" to="furniture/Caesar_Decipher_1_3" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="furniture/Caesar_Decipher_1_3/Area3D" to="furniture/Caesar_Decipher_1_3" method="_on_area_3d_body_exited"]
<<<<<<< HEAD
[connection signal="body_entered" from="furniture/bücherschrank_neu/Area3D" to="furniture/bücherschrank_neu" method="_on_area_3d_body_entered"]
[connection signal="input_event" from="furniture/bücherschrank_neu/Area3D" to="furniture/bücherschrank_neu" method="_on_area_3d_input_event"]
[connection signal="body_entered" from="katze/Area3D" to="katze" method="_on_area_3d_body_entered"]
=======
>>>>>>> 59510b83e89232a772f99a6db29f48be8a26aba7
